css/shanti-search.css
/* ... */
#search-flyout.extruder.right.isOpened .extruder-content{ border-right-width:12px;}
#search-flyout.extruder .text{ border:none; padding:0; text-shadow:none; background:#f8f8f8; color:#333;}

/*--- big search button inline styles are loaded via main.js with icon markup  */
#search-flyout.extruder.right .flap{ background:#fff; height:48px; width:45px; padding: 7px 0 7px 7px; margin:0 0 0 -7px; cursor:pointer; display:block; border-top-left-radius:44px;border-bottom-left-radius:44px;border-collapse: separate; -webkit-box-shadow: -4px 0 4px rgba(0,0,0, 0.1250); box-shadow: -4px 0 4px rgba(0,0,0, 0.1250); border-collapse: separate;}
#search-flyout.extruder.right .flap.on-flap{ border-collapse:separate;}
#search-flyout.extruder.right .flap .flapLabel,
#search-flyout.extruder.right .flap.on-flap .flapLabel{ background:#505050; height:30px; width:37px !important; padding:17px 38px 17px 0; margin:0; display:block; border-top-left-radius:20px; border-bottom-left-radius:20px;border-collapse: separate;}
#search-flyout.extruder.right.isOpened .flap{ width:48px; margin:0 0 0 -8px;}
#search-flyout.extruder.right.isOpened .flap.on-flap .flapLabel{ width:30px !important;}
/*----- css for the flap is inserted inline, see js/main ---*/
#search-flyout.extruder.right .flap>span,
#search-flyout.extruder.right .flap.on-flap>span{ color:#ddd;-webkit-transition: all .3s ease-out; -moz-transition: all .3s ease-out; transition: all .3s ease-out;}
#search-flyout.extruder.right .flap.on-hover>span,
#search-flyout.extruder.right .flap.on-hover.on-flap>span{ color:#fff;background:#444;-webkit-transition: all .3s ease-out;-moz-transition: all .3s ease-out;transition: all .3s ease-out;}

#search-flyout.extruder.right .flap>span .icon{ font-size:21px; position:absolute; left:17px; top:14px; z-index:10;}

#menu-main.extruder.right{ margin-top:39px; color:#888 !important;}
#menu-main.extruder.right .extruder-content{ background:transparent !important; color:#888 !important; overflow:visible !important; box-shadow:none !important; }
#menu-main.extruder.right.isOpened .extruder-content{ color:#888 !important;}
#menu-main.extruder .text{ color:#888 !important;}

#menu-collections.extruder.right{ margin-top:39px; color:#888 !important;}
#menu-collections.extruder.right .extruder-content{ color:#888 !important; background:transparent !important; overflow:visible !important; box-shadow:none !important; }
#menu-collections.extruder.right.isOpened .extruder-content{ color:#fff !important;}
#menu-collections.extruder .text{ color:#888 !important;}
/*----------------------------------------------*/
/*--- END :: Sliding Panel ---------------------*/






/*--- START :: Search Panel :: Input & View ----*/
/*----------------------------------------------*/
.input-section{ padding:0;border: 1px solid #e0e0e0;display:block;width:100%;}
.input-section .input-group input.form-control:first-child{ border-bottom-right-radius: 25px;border-top-right-radius: 25px; background-clip: padding-box;}
.input-section .input-group{ padding: 0 12px 0 10px; display:block; width:100%; background:#f8f8f8;}
.input-section .input-group input.form-control{
	color:#777;
	border: 1px solid #ccc;
	border-radius: 25px;
	background-clip: padding-box;
	font-size:1.06em;
	height:35px; /* coordinate with button height below */
	line-height:1.44em;
	margin: 14px 0 0;
	padding:2px 60px 0 15px;
  width:100%;
  max-width:100%;
	overflow: auto;
	vertical-align:middle;
	-webkit-box-shadow:0 2px 5px #eee inset;
	box-shadow:0 2px 5px #eee inset;
	border-collapse: separate; /* fix for ie9 shadow */
	background: #fff;
	-webkit-transition-property: all;
	-webkit-transition-duration: 400ms;
	transition-property: all;
	transition-duration: 400ms;
}
.input-section .input-group input.form-control:hover{ border: 1px solid #ccc; color:#777;}
.input-section .input-group input.form-control:focus{ border: 1px solid #9097d3; -webkit-box-shadow: 0 0 4px #949bd8;box-shadow: 0 0 4px #949bd8; border-collapse: separate; /* fix for ie9 shadow */}

/*--- button group ---*/
.input-section .input-group .input-group-btn{ width:45px !important; /* set button width and position */ position:absolute; top:15px; right:13px; z-index:10; background:transparent; padding:0; margin:0;}

/*--- button ---*/
.input-section .input-group .btn.btn-default{
	display:block;
	height:33px; /* 2px less than search input height above */
	color:#aaa;
	width:100%;
	border: 1px solid #e5e5e5;
	border-width:0 0 0 1px;
	border-radius:0;
  border-top-right-radius: 25px !important;
  border-bottom-right-radius: 25px !important;
	background-clip: padding-box;
	-webkit-box-shadow:none;
	box-shadow:none;
	padding:0;
	margin:0;
	font-size:1.2rem;
	background-image: linear-gradient(to bottom,#fff 0,#e0e0e0 100%);
}
.input-section .input-group .btn.btn-default:hover{ background:#eee; color:#d00;}
.input-section .input-group .btn.btn-default:active, .input-section .input-group .btn-default.active{ background: transparent; border-color:#fff; /* active state for button */}
.input-section .input-group .btn.btn-default .icon{ font-family: 'Glyphicons Halflings' !important;	background:transparent;}
.input-section .input-group .btn.btn-default .icon:before{ content: '\e080'; position:relative; right:0.25rem; top:-0.56rem;}
.input-section .input-group .btn.btn-default:active .icon,
.input-section .input-group .btn.btn-default.active .icon{ color:#777;}
/*--- clear all button ---*/
.input-section .feature-group .feature-reset,
.input-section .input-group .searchreset{
	border:none;
	background: #eee;
	border-radius:50%;
	background-image:none;
	width:15px;
	height:15px;
	position:absolute;
	right:49px;
	top:9px;
	z-index:10000;
	font-size:1.5em;
	color:#ccc;
	display:none;
	padding:0;margin:0;
}
.input-section .input-group .btn.searchreset:active,
.input-section .input-group .btn.searchreset.active{ box-shadow:none; background-image:none;}
.input-section .input-group .btn.searchreset .icon{ font-size:1.25em; color:#aaa; }
/* ... */

